--- a/6/6.2/6.2.md
+++ b/6/6.2/6.2.md
@@ -98,12 +98,15 @@ Acuerdo que es consecuencia de la negociacion entre el inquilino y la empresa pa
   ## Entidad Actividad
 Actividad realizada durante la ejecucion del proyecto
 
-| **Atributo**  | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                |
-| ------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | -------------------------------------- |
-| cod_actividad | CHAR(30)       | x(10)       | no nulo, único        | N/A        | N/A             | Codigo para identificar a la actividad |
-| descripcion   | VARCHAR(30)    | x(30)       | No nulo               | N/A        | N/A             | Descripcion de la actividad            |
-| Fecha_inicio  | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha en la que inicia la actividad    |
-| Fecha_fin     | CHAR(10)       | x(10)       | Fecha válida, no nulo | N/A        | N/A             | Fecha en la que finaliza la actividad  |
+| **Atributo**     | **Naturaleza** | **Formato** | **Valores Válidos**              | **Unidad** | **Derivada de** | **Descripción (Corta)**                      |
+| ---------------  | -------------- | ----------- | -------------------------------  | ---------- | --------------- | -------------------------------------------- |
+| cod_actividad    | CHAR(30)       | x(10)       | no nulo, único                   | N/A        | N/A             | Codigo para identificar a la actividad       | 
+| Nombre           | CHAR(30)       | x(10)       | no nulo, único                   | N/A        | N/A             | Nombre de la actividad                       |
+| descripcion      | VARCHAR(30)    | x(30)       | No nulo                          | N/A        | N/A             | Descripcion de la actividad                  |
+| Costo            | Decimal(5,2)   | x99999.99   | No nulo                          | N/A        | N/A             | Cantidad de dinero gastado para la actividad |
+| Fecha_inicio     | DATE           | YYYY-MM-DD  | Fecha válida, no nulo            | N/A        | N/A             | Fecha en la que inicia la actividad          |
+| Fecha_fin        | CHAR(10)       | x(10)       | Fecha válida, no nulo            | N/A        | N/A             | Fecha en la que finaliza la actividad        |
+| Estado_actividad | VARCHAR(20)    | x(20)       | En espera, Pendiente, completado | N/A        | N/A             | Estado en el que se encuentra la actividad   |
 
 
   ## Entidad Programación Mantenimientos
