--- a/4/4.4/4.4.md
+++ b/4/4.4/4.4.md
@@ -12,11 +12,11 @@
 ## Especificaciones de requerimientos <br>
 ### Caso de Uso #1: Crear un nuevo inquilino
 
-| Código | R001 |
+| Código | R012 |
 |--------|------|
-| Objetivo | Registrar a un nuevo inquilino en el sistema con todos sus datos relevantes |
-| Descripción | El administrados ingresa un nuevo inquilino en el sistema proporcionando la información de contacto y de negocios requerida. |
-| Actor | Administrador |
+| **Objetivo** | Registrar a un nuevo inquilino en el sistema con todos sus datos relevantes |
+| **Descripción** | El administrados ingresa un nuevo inquilino en el sistema proporcionando la información de contacto y de negocios requerida. |
+| **Actor** | Administrador |
 | Flujo de eventos |
 | 1 | El administrador accede al sistema y selecciona la opción "Agregar nuevo inquilino". |
 | 2 | El sistema muestra un formulario para ingresar los datos del inquilino: nombre comercial, razón social, RUC, dirección, teléfono y correo electrónico. |
@@ -27,12 +27,12 @@
 | 7 | Fin del caso de uso. |
 
 ### Caso de Uso #2: Editar un inquilino
-| Caso de uso | R002 |
+| Caso de uso | R013 |
 |-------------|---------------------------|
 | **Objetivo** | Permitir a los administradores actualizar la información de un inquilino registrado en el sistema. |
 | **Descripción** | Este caso de uso permite a los administradores modificar los datos existentes de un inquilino, asegurando que la información sea precisa y esté actualizada. |
 | **Actor** | Administrador |
-| **Flujo de eventos** |
+| Flujo de eventos |
 | 1 | El administrador accede al módulo de inquilinos. |
 | 2 | El administrador selecciona la opción "Editar". |
 | 3 | El sistema muestra una lista de inquilinos registrados. |
@@ -46,11 +46,11 @@
 
 
 ### Caso de Uso #3: Eliminar o dar de baja a un inquilino
-| Código | R003 |
+| Código | R014 |
 |--------|------|
-| Objetivo | Eliminar o dar de baja a un inquilino que ya no tiene contratos activos. |
-| Descripción | El administrador pueda dar de baja o eliminar a un inquilino si este ya no tiene contratos ni pagos pendientes. |
-| Actor | Administrador |
+| **Objetivo** | Eliminar o dar de baja a un inquilino que ya no tiene contratos activos. |
+| **Descripción** | El administrador pueda dar de baja o eliminar a un inquilino si este ya no tiene contratos ni pagos pendientes. |
+| **Actor** | Administrador |
 | Flujo de Eventos |
 | 1 | Se accede al sistema y busca al inquilino a dar de baja. |
 | 2 | El sistema validad si el inquilino tiene contratos activos o pagos pendientes. |
@@ -58,19 +58,4 @@
 | 4 | El administrador confirma la acción. |
 | 5 | El sistema cambia el estado del inquilino a "Inactivo° o lo elimina de la base de datos. |
 | 6 | El sistema notifica al administrador sobre la finalización de la operación. |
-| 7 | Fin del caso de uso. |
-
-### Caso de Uso #4: Gestionar la renovación de contratos
-| Código | R003 |
-|--------|------|
-| Objetivo | Permitir la renovación de un contrato de arrendamiento existente. |
-| Descripción | El administrador renueva un contrato próximo a vencer, actualizando fechas y condificones de arrendamiento. |
-| Actor | Administrador |
-| Flujo de eventos |
-| 1 | El usuario accede el sistema y seleccion el inquilino correspondiente. |
-| 2 | Se selecciona el contrato actual y elige la opción "Renovar contrato". |
-| 3 | El sistema presenta un formulario para actualizar las fechas y condiciones del nuvo contrato. |
-| 4 | El usuario ingresa las nuevas fechas, monto de renta y posibles cambios en las condiciones. |
-| 5 | El sistema valida que el espacio siga disponible y que las fechas sena coherentes. |
-| 6 | El sistema actualiza el contrato con la nueva información. |
 | 7 | Fin del caso de uso. |
