--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -1,15 +1,15 @@
 # 8.1. Sentencias SQL por módulo / prototipo
 
 
-| Codigo Requerimiento  |R - 012| 
+| Codigo Requerimiento  |R-012| 
 |-----------------------|-------|
-| Codigo Interfaz       |I - 019| 
+| Codigo Interfaz       |I-019| 
 | Imagen interfaz       |![image](I019.png)|
 
 ## Sentencias SQL
 ### Eventos:
-* **Carga de la página de Inquilinos:** Se llenará la tabla mostrada de los inquilinos vigentes en MallPlaza
-```
+* **Carga de la página de Inquilinos:** Se llenará la tabla de los inquilinos vigentes en MallPlaza
+```sql
 SELECT i.id_inquilino,
 		p.nombre as "Nombre",
 		i.razon_social as "Razón Social",
@@ -29,8 +29,8 @@ JOIN espacio_comercial c
 	ON i.id_espacio_comercial = c.id_espacio_comercial;
 ```
 
-* **Búsqueda de Inquilino:** Se llenará la barra de búsqueda para realizar la búsqueda según el atributo seleccionado en el filtro.
-```
+* **Búsqueda de Inquilino:** El usuario ingresará el texto en la barra de búsqueda para realizar la consulta correspondiente según el atributo que haya seleccionado en el filtro.
+```sql
 SELECT i.id_inquilino,
 		p.nombre as "Nombre",
 		i.razon_social as "Razón Social",
@@ -56,3 +56,57 @@ WHERE 	id_inquilino = <1> OR
 
 *Donde el valor ingresado en <1> se captura y se realiza la búsqueda según la opción que se seleccionó en <2>*
 
+| Codigo Requerimiento  |R-013| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-021, I-022| 
+| Imagen interfaz       |![image](I021.png)|
+| Imagen interfaz       |![image](I022.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Carga de página:** Se llenará la tabla de los inquilinos vigentes en MallPlaza.
+```sql
+SELECT * FROM inquilinos_tabla; --Vista creada en la base de datos
+```
+* **Boton Editar:** Cuando el usuario seleccione el inquilino que quiera editar y presione el botón "Editar" se abrirá una ventana emergente con los datos de ese inquilino.
+```sql
+SELECT * FROM inquilinos_tabla
+WHERE id_inquilino = <2>
+```
+*Donde <2> representa el id del inquilino seleccionado para realizar la búsqueda del inquilino a editar*
+* **Editar Datos de Inquilino:** El usuario selecciona los datos principales del inquilino que quiera modificar, luego el usuario podrá dar al botón "Aceptar".
+```sql
+UPDATE inquilinos_tabla
+SET nombre = <1>,
+    razon_social = <2>,
+    ruc = <3>,
+    espacio_comercial = <4>,
+    telefono = <5>,
+    email = <6>,
+    estado_inquilino = <7>
+WHERE id_inquilino = 'I001'; --ejemplo
+```
+| Codigo Requerimiento  |R-013| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-021, I-023| 
+| Imagen interfaz       |![image](I021.png)|
+| Imagen interfaz       |![image](I023.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Carga de Datos:** Se llenará la tabla de los inquilinos vigentes en MallPlaza.
+```sql
+SELECT * FROM inquilinos_tabla; --Vista creada en la base de datos
+```
+* **Boton Eliminar:** Cuando el usuario seleccione el inquilino que quiera eliminar y presione el botón "Eliminar" se abrirá una ventana emergente con los datos de ese inquilino.
+```sql
+SELECT * FROM inquilinos_tabla
+WHERE id_inquilino = <2>
+```
+*Donde <2> representa el id del inquilino seleccionado para realizar la búsqueda del inquilino a editar*
+* **Eliminar registro de Inquilino:** El usuario podrá ver la información del inquilino antes de confirmar y presionar el botón de "Eliminar"
+```sql
+DELETE FROM inquilinos
+WHERE id_inquilino = <2>;
+```
+*Donde <2> representa el id del inquilino seleccionado para realizar la búsqueda del inquilino a editar*
