--- a/8/8.2/8.2.md
+++ b/8/8.2/8.2.md
@@ -1,4 +1,6 @@
 # 8.2. Alcance del Piloto (Funcionalidad primaria por módulo)
+## MÓDULO 3: ARRENDAMIENTOS
+
 
 ## MÓDULO 4: INQUILINOS
 * **Función Primaria:** 
