--- a/8/8.2/8.2.md
+++ b/8/8.2/8.2.md
@@ -1,6 +1,16 @@
 # 8.2. Alcance del Piloto (Funcionalidad primaria por módulo)
 ## MÓDULO 3: ARRENDAMIENTOS
+* **Función Primaria:** 
+* **Sustentación:** 
 
+|Actividad| Descripcion       | 
+|---------|-------------------|
+| 1       | Luego ingresar a la sección de "Arrendamientos" y darle click a la sección de "Inquilinos" se mostrará la pantalla I-019 donde se podrá visualizar la tabla de los inquilinos los cuales tienen un registro en MallPlaza<br><br> ![image](I011.png)| 
+| 2       | texto <br><br>![image](I011.png)| 
+| 3       | texto <br><br>![image](I021.png)|
+| 4       | texto <br><br>![image](I022.png)| 
+| 5       | texto <br><br>![image](I023.png)|
+| 6       | texto <br><br>![image](I024.png)|
 
 ## MÓDULO 4: INQUILINOS
 * **Función Primaria:** 
