--- a/8/8.2/8.2.md
+++ b/8/8.2/8.2.md
@@ -5,12 +5,14 @@
 
 |Actividad| Descripcion       | 
 |---------|-------------------|
-| 1       | Luego ingresar a la sección de "Arrendamientos" y darle click a la sección de "Inquilinos" se mostrará la pantalla I-019 donde se podrá visualizar la tabla de los inquilinos los cuales tienen un registro en MallPlaza<br><br> ![image](I011.png)| 
-| 2       | texto <br><br>![image](I011.png)| 
-| 3       | texto <br><br>![image](I021.png)|
-| 4       | texto <br><br>![image](I022.png)| 
-| 5       | texto <br><br>![image](I023.png)|
-| 6       | texto <br><br>![image](I024.png)|
+| 1       | Luego ingresar a la sección de "Arrendamientos" y darle click a la sección de "Contratos" se mostrará la pantalla I-011 donde se podrá visualizar la tabla de los contratos los cuales estan registrados en MallPlaza<br><br> ![image](I011.png)| 
+| 2       | texto <br><br>![image](I012.png)| 
+| 3       | texto <br><br>![image](I013.png)|
+| 4       | texto <br><br>![image](I014.png)| 
+| 5       | texto <br><br>![image](I015.png)|
+| 6       | texto <br><br>![image](I016.png)|
+| 7       | texto <br><br>![image](I017.png)|
+| 8       | texto <br><br>![image](I018.png)|
 
 ## MÓDULO 4: INQUILINOS
 * **Función Primaria:** 
