--- a/3/3.2/3.2.md
+++ b/3/3.2/3.2.md
@@ -96,14 +96,14 @@ Mediante este modulo los inquilinos y la empresa pueden gestionar los servicios 
 - Envia una solicitud que deberá ser revisada y aprobada.
 - Módulo de seguridad: Aquel que puede solicitar un espacio debe ser un cliente registrado y logeado.
 
-## 8. Módulo de Mantenimiento y Servicio
+## 8. Módulo de Gestión de mantenimientos programados
 Mediante este módulo la empresa podrá gestionar el mantenimiento preventivo y correctivo del centro comercial.
 ### Responsabilidades
-- Registrar los mantenimientos preventivos y correctivos para una mejor gestión.
-- Permitir al administrador de mantenimiento ver los mantenimientos correctivos pendientes a programar.
+- Permitir al administrador de mantenimiento ver los mantenimientos correctivos pendientes a programar y los que ya se realizaron.
+- Permitir al administrador de mantenimiento programar mantenimientos preventivos y correctivos al establecimiento.
 - Permitir al supervisor de mantenimiento observar los mantenimientos pendientes a su cargo y los que ya están realizados.
-- Permitir al administrador programar mantenimientos preventivos al establecimiento.
+- Permitir al supervisor registrar los mantenimientos realizados.
 - Permitir registrar incidencias que ocurren en el establecimiento que implica una acción correctiva.
 ### Interacción con otros módulos
-- Módulo de usuario: Los usuarios, como el supervisor de mantenimiento o los administradores del centro comercial, necesitan acceso al sistema para gestionar las tareas de mantenimiento. 
+- Módulo de usuario: Los usuarios, como los supervisores de mantenimiento o el administrador de mantenimiento del centro comercial, necesitan acceso al sistema o estar logueados para gestionar las tareas de mantenimiento. 
 
