--- a/8/8.2/8.2.md
+++ b/8/8.2/8.2.md
@@ -7,8 +7,7 @@
 |Actividad| Descripcion       | 
 |---------|-------------------|
 | 1       | Luego ingresar a la sección de "Arrendamientos" y darle click a la sección de "Inquilinos" se mostrará la pantalla I-019 donde se podrá visualizar la tabla de los inquilinos los cuales tienen un registro en MallPlaza<br><br> ![image](I019.png)| 
-| 2       | texto <br><br>![image](I020.png)| 
-| 3       | texto <br><br>![image](I021.png)|
-| 4       | texto <br><br>![image](I022.png)| 
-| 5       | texto <br><br>![image](I023.png)|
-| 6       | texto <br><br>![image](I024.png)|
+| 2       | Si el usuario presiona el botón "Agregar" tendrá la opción de poder ingresar los datos de un nuevo inquilino que quiere registrar, se le mostrará la pantalla dei nterfaz I-020. <br><br>![image](I020.png)| 
+| 3       | En la pantalla I-021 se muestra el registro del inquilino agregado correctamente <br><br>![image](I021.png)|
+| 4       | El usuario tendrá la oportunidad de Editar cualquier registro de un usuario luego de seleccionar al inquilino y presionar el botón "Eliminar", se le mostrará la ventana emergente I-023<br><br>![image](I023.png)|
+| 5       | ![image](I024.png)|
