--- a/8/8.2/8.2.md
+++ b/8/8.2/8.2.md
@@ -15,8 +15,8 @@
 | 8       | texto <br><br>![image](I018.png)|
 
 ## MÓDULO 4: INQUILINOS
-* **Función Primaria:** 
-* **Sustentación:** 
+* **Función Primaria:** Centralizar y gestionar de manera eficiente toda la información relevante de los inquilinos para optimizar el control y seguimiento de los arrendamientos en MallPlaza.
+* **Sustentación:** La centralización de la información de los inquilinos permite un control eficiente de los arrendamientos en MallPlaza. Además, reduce errores administrativos al mantener datos actualizados y accesibles, agilizando tareas de edición, búsqueda y filtrado.
 
 |Actividad| Descripcion       | 
 |---------|-------------------|
