--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -150,8 +150,8 @@ Representa el registro de matenimiento realizados.
 | ---------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | --------------------------------------------------------- |
 | cod_RMantenimiento | SERIAL       | 999999999       | >0, No nulo, único        | N/A        | N/A             | Identificador único del registro de mantenimiento  |
 | fecha_Realizada   | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha que se realizó el registro                          |
-| hora_inicio    | TIME           | HH: MM :SS  | Valida en tiempo      | horas      | N/A             | Hora que se realizó el mantenimiento                          |
-| hora_fin       | TIME           | HH: MM : SS | Valida en tiempo       | horas     | N/A              | Hora en que finalizó el mantenimiento |
+| hora_inicio    | TIME           | HH: MM :SS  | Valida en tiempo, no nulo      | horas      | N/A             | Hora que se realizó el mantenimiento                          |
+| hora_fin       | TIME           | HH: MM : SS | Valida en tiempo, no nulo       | horas     | N/A              | Hora en que finalizó el mantenimiento |
 | Observaciones    | VARCHAR           | x(64)       | Puede ser nulo               | N/A        | N/A             | Detalles que hubieron en el mantenimiento                 |
 
 
@@ -160,7 +160,7 @@ Representa las zonas y tiendas donde se va a realizar el mantenimiento.
 
 | **Atributo**         | **Naturaleza** | **Formato** | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**                    |
 | -------------------- | -------------- | ----------- | -------------------- | ---------- | --------------- | ------------------------------------------ |
-| nombre_instal        | CHAR           | x(30)       | No nulo              | N/A        | N/A             | Nombre específico de la instalación        |
+| nombre_instal        | VARCHAR         | x(40)       | No nulo              | N/A        | N/A             | Nombre específico de la instalación        |
 
 ## Entidad Espacio comercial
 Representa los modulos y tiendas que se encuentran en Mall Plaza.
