--- a/6/6.2/6.2.md
+++ b/6/6.2/6.2.md
@@ -112,14 +112,14 @@ Actividad realizada durante la ejecucion del proyecto
   ## Entidad Programación Mantenimientos
 Representa la programación de mantenimientos, tanto preventivo como correctivo.
 
-| **Atributo**      | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                                  |
-| ----------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | -------------------------------------------------------- |
-| cod_Mantenimiento | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del mantenimiento                    |
-| prioridad         | CHAR(2)        | XX          | TAB1                  | N/A        | N/A             | Prioridad que tiene el mantenimiento                     |
-| plazo             | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha máxima que se tiene para realizar el mantenimiento |
-| Descripción       | VARCHAR        | x(64)       | No nulo               | N/A        | N/A             | Detalles que tiene el mantenimiento                      |
-| encargado         | VARCHAR        | x(64)       | No nulo               | N/A        | N/A             | Encargado de dirigir cierto mantenimiento                |
-| Estado            | VARCHAR        | x(30)       | (Pendiente, Hecho)    | N/A        | N/A             | Estado en que se encuentra un mantenimiento programado   |
+| **Atributo**    | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                                  |
+| --------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | -------------------------------------------------------- |
+| dod_Mantenimiento | SERIAL       |9999999       | >0, No nulo, único        | N/A        | N/A             | Identificador único del mantenimiento                   |
+| prioridad       | CHAR(2)        | X9          | TAB1                  | N/A        | N/A             | Prioridad que tiene el mantenimiento                     |
+| plazo           | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha máxima que se tiene para realizar el mantenimiento |
+| Descripción     | VARCHAR        | x(100)      | No nulo               | N/A        | N/A             | Detalles que tiene el mantenimiento                     |
+| encargado        | CHAR(10)      | X(10)       | No nulo               | N/A        | N/A             | Encargado de dirigir cierto mantenimiento            |
+| estado           | DEFINIDO      | DEFINIDO    | (Pendiente, Hecho)     | N/A         |  N/A             |  Estado en que se encuentra un mantenimiento programado| 
 
 
 TAB1
@@ -131,31 +131,34 @@ TAB1
 | I3     | Alta        |
 | I4     | Crítica     |
 
+| **Atributo**   | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**               |
+| -------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | ------------------------------------- |
+|   prioridad    |  CHAR(2)       | X9          | no null               | N/A        | N/A             | Prioridad que tiene el mantenimiento  |
+|  descrip_prioridad| VARCHAR     |  X(64)      | no null               | N/A        |  N/A            | Nombre propio que posee cada prioridad |
 
 
 
 ## Entidad Registro Incidencia
 Representa el registro de incidencias y problemas que pueda haber en el centro comercial para luego realizar su mantenimiento correctivo.
 
-| **Atributo**   | **Naturaleza** | **Formato** | **Valores Válidos**     | **Unidad** | **Derivada de** | **Descripción (Corta)**              |
-| -------------- | -------------- | ----------- | ----------------------- | ---------- | --------------- | ------------------------------------ |
-| cod_incidencia | CHAR(10)       | x(10)       | No nulo, único          | N/A        | N/A             | Identificador único de la incidencia |
-| fecha_Registro | DATE           | YYYY-MM-DD  | Fecha válida, no nulo   | N/A        | N/A             | Fecha que se realizó el registro     |
-| hora_Registro  | TIME           | HH: MM :SS  | Valida en tiempo        | horas      | N/A             | Hora que se realizó el registro      |
-| descripción    | VARCHAR        | x(64)       | No nulo                 | N/A        | N/A             | Detalles que tiene la incidencia     |
-| estado         | VARCHAR        | x(30)       | (pendiente, programado) | N7A        | N/A             | Estado de la incidencia registrada   |
+| **Atributo**   | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**               |
+| -------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | ------------------------------------- |
+| cod_incidencia | SERIAL       | 99999999       | >0, No nulo, único        | N/A        | N/A             | Identificador único de la incidencia  |
+| fecha_hora_registro | TIMESTAMP | YYYY-MM-DD HH: MM :SS  | Fecha y hora válida, no nulo | N/A        | N/A             | Fecha y hora que se realizó el registro      |
+| descripción    | VARCHAR           | x(100)       | No nulo               | N/A        | N/A             | Detalles que tiene la incidencia      |
+| estado         | DEFINIDO           | DEFINIDO       | (pendiente, programado) | N/A        | N/A             | Estado de la incidencia registrada    |
 
 
 ## Entidad Registro Mantenimiento
 Representa el registro de matenimiento realizados.
 
-| **Atributo**       | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                           |
-| ------------------ | -------------- | ----------- | --------------------- | ---------- | --------------- | ------------------------------------------------- |
-| cod_RMantenimiento | CHAR(10)       | x(10)       | No nulo, único        | N/A        | N/A             | Identificador único del registro de mantenimiento |
-| fecha_Realizada    | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha que se realizó el registro                  |
-| hora_inicio        | TIME           | HH: MM :SS  | Valida en tiempo      | horas      | N/A             | Hora que se realizó el mantenimiento              |
-| hora_fin           | TIME           | HH: MM : SS | Valida en tiempo      | horas      | N/A             | Hora en que finalizó el mantenimiento             |
-| Observaciones      | VARCHAR        | x(64)       | No nulo               | N/A        | N/A             | Detalles que hubieron en el mantenimiento         |
+| **Atributo**     | **Naturaleza** | **Formato** | **Valores Válidos**   | **Unidad** | **Derivada de** | **Descripción (Corta)**                                   |
+| ---------------- | -------------- | ----------- | --------------------- | ---------- | --------------- | --------------------------------------------------------- |
+| cod_RMantenimiento | SERIAL       | 999999999       | >0, No nulo, único        | N/A        | N/A             | Identificador único del registro de mantenimiento  |
+| fecha_Realizada   | DATE           | YYYY-MM-DD  | Fecha válida, no nulo | N/A        | N/A             | Fecha que se realizó el registro                          |
+| hora_inicio    | TIME           | HH: MM :SS  | Valida en tiempo, no nulo      | horas      | N/A             | Hora que se realizó el mantenimiento                          |
+| hora_fin       | TIME           | HH: MM : SS | Valida en tiempo, no nulo       | horas     | N/A              | Hora en que finalizó el mantenimiento |
+| Observaciones    | VARCHAR           | x(64)       | Puede ser nulo               | N/A        | N/A             | Detalles que hubieron en el mantenimiento                 |
 
 
 ## Entidad Instalación
@@ -163,9 +166,8 @@ Representa las zonas y tiendas donde se va a realizar el mantenimiento.
 
 | **Atributo**  | **Naturaleza** | **Formato** | **Valores Válidos**  | **Unidad** | **Derivada de** | **Descripción (Corta)**             |
 | ------------- | -------------- | ----------- | -------------------- | ---------- | --------------- | ----------------------------------- |
-| cod_instal    | CHAR(10)       | x(10)       | No nulo              | N/A        | N/A             | Código único de intalación          |
-| nombre_instal | CHAR           | x(30)       | No nulo              | N/A        | N/A             | Nombre específico de la instalación |
-| Tipo          | VARCHAR        | x(20)       | zona, tienda, módulo | N/A        | N/A             | Detalla el tipo de intalación       |
+| cod_instalacion    | CHAR(6)       | XXX999       | No nulo              | N/A        | N/A             | Código único de intalación          |
+| nombre_instalacion | VARCHAR        | x(40)       | No nulo              | N/A        | N/A             | Nombre específico de la instalación |
 
 ## Entidad Espacio comercial
 Representa los modulos y tiendas que se encuentran en Mall Plaza.
