--- a/7/7.1/7.1.md
+++ b/7/7.1/7.1.md
@@ -9,9 +9,9 @@ Se hizo uso de la generación automática de ERDPlus; sin embargo, se realizaron
 Se crean los tipos enumerados necesarios utilizados CREATE TYPE, definiedo cada tipo con sus respectivos valores. También se siguio de aplicar la 2FN (Segunda Forma Normal) de los cuales los principales puntos a considerar fue la no dependencia parcial en las columnas no clave.
 
 3. Definición de columnas y restricciones
-Para cada tabla, se especifican los tipos de datos adecuados (como CHAR, VARCHAR, DATE, NUMERIC, etc.) y se establecen restricciones (como NOT NULL, DEFAULT, etc.) para asegurar que los datos sean válidos.
+Para cada tabla, se especifican los tipos de datos adecuados (como SERIAL, TIMESTAMP, CHAR, VARCHAR, DATE, NUMERIC, etc.) y se establecen restricciones (como NOT NULL, DEFAULT, etc.) para asegurar que los datos sean válidos.
 
-4. Relacioens entre Tablas
+4. Relaciones entre Tablas
 Se implementan relaciones entre tablas a través de claves foráneas, conectando las tablas relevantes (por ejemplo, FOREIGN KEY (id_persona) REFERENCES Persona(id_persona)).
 
 5. Eliminación de Tablas Existentes
