--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -1,4 +1,129 @@
 # 8.1. Sentencias SQL por módulo / prototipo
+| Codigo Requerimiento  |R-09| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-011| 
+| Imagen interfaz       |![image](I011.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Carga de la página de Contratos:** Se llenará la tabla de todos los contratos en MallPlaza
+```sql
+SELECT
+    ca.id_contrato AS "Nro Contrato",
+    p.nombre AS "Inquilino",
+    ec.tipo_inmueble AS "Inmueble",
+    ca.fecha_inicio AS "Fecha Inicio",
+    ca.fecha_vencimiento AS "Fecha Fin",
+    ca.estado AS "Estado",
+    ca.monto AS "Monto Renta"
+FROM
+    Contrato_Alquiler ca
+JOIN
+    Espacio_Comercial ec ON ca.id_espacio_comercial = ec.id_espacio_comercial
+JOIN
+    Inquilino i ON ec.id_espacio_comercial = i.id_espacio_comercial
+JOIN
+    Persona p ON i.id_persona = p.id_persona
+ORDER BY
+    ca.id_contrato;
+
+```
+
+* **Filtrar por tipo de inmueble :** El usuario elegirá la filtro "Tipo de inmueble" dentro del cuadro de opciones para realizar la consulta y poder mostrar los contratos con el tipo de inmueble seleccionado.
+```sql
+SELECT
+    ca.id_contrato AS "Nro Contrato",
+    p.nombre AS "Inquilino",
+    ec.tipo_inmueble AS "Inmueble",
+    ca.fecha_inicio AS "Fecha Inicio",
+    ca.fecha_vencimiento AS "Fecha Fin",
+    ca.estado AS "Estado",
+    ca.monto AS "Monto Renta"
+FROM
+    Contrato_Alquiler ca
+JOIN
+    Espacio_Comercial ec ON ca.id_espacio_comercial = ec.id_espacio_comercial
+JOIN
+    Inquilino i ON ec.id_espacio_comercial = i.id_espacio_comercial
+JOIN
+    Persona p ON i.id_persona = p.id_persona
+WHERE ec.tipo_inmueble = <1>;
+
+```
+
+*Donde el valor seleccionado en <1> es utilizado para realizar la búsqueda de los contratos que posean esas caracteristicas*
+
+* **Filtrar por Contratos recientes :** El usuario elegirá la filtro "Contratos recientes" dentro del cuadro de opciones para realizar la consulta y poder mostrar los contratos que se hayan registrado recientemente.
+```sql
+SELECT
+    ca.id_contrato AS "Nro Contrato",
+    p.nombre AS "Inquilino",
+    ec.tipo_inmueble AS "Inmueble",
+    ca.fecha_inicio AS "Fecha Inicio",
+    ca.fecha_vencimiento AS "Fecha Fin",
+    ca.estado AS "Estado",
+    ca.monto AS "Monto Renta"
+FROM
+    Contrato_Alquiler ca
+JOIN
+    Espacio_Comercial ec ON ca.id_espacio_comercial = ec.id_espacio_comercial
+JOIN
+    Inquilino i ON ec.id_espacio_comercial = i.id_espacio_comercial
+JOIN
+    Persona p ON i.id_persona = p.id_persona
+ORDER BY ca.fecha_inicio DESC;
+
+```
+
+* **Filtrar por Contratos proximos a vencer :** El usuario elegirá la filtro "Proximos a vencer" dentro del cuadro de opciones para realizar la consulta y poder mostrar los resultados.
+```sql
+SELECT
+    ca.id_contrato AS "Nro Contrato",
+    p.nombre AS "Inquilino",
+    ec.tipo_inmueble AS "Inmueble",
+    ca.fecha_inicio AS "Fecha Inicio",
+    ca.fecha_vencimiento AS "Fecha Fin",
+    ca.estado AS "Estado",
+    ca.monto AS "Monto Renta"
+FROM
+    Contrato_Alquiler ca
+JOIN
+    Espacio_Comercial ec ON ca.id_espacio_comercial = ec.id_espacio_comercial
+JOIN
+    Inquilino i ON ec.id_espacio_comercial = i.id_espacio_comercial
+JOIN
+    Persona p ON i.id_persona = p.id_persona
+ORDER BY ca.fecha_vencimiento DESC;
+
+```
+
+* **Filtrar por estado :** El usuario elegirá la filtro "Estado" dentro del cuadro de opciones para realizar la consulta y poder mostrar los contratos con el tipo de estado seleccionado.
+```sql
+SELECT
+    ca.id_contrato AS "Nro Contrato",
+    p.nombre AS "Inquilino",
+    ec.tipo_inmueble AS "Inmueble",
+    ca.fecha_inicio AS "Fecha Inicio",
+    ca.fecha_vencimiento AS "Fecha Fin",
+    ca.estado AS "Estado",
+    ca.monto AS "Monto Renta"
+FROM
+    Contrato_Alquiler ca
+JOIN
+    Espacio_Comercial ec ON ca.id_espacio_comercial = ec.id_espacio_comercial
+JOIN
+    Inquilino i ON ec.id_espacio_comercial = i.id_espacio_comercial
+JOIN
+    Persona p ON i.id_persona = p.id_persona
+WHERE ca.estado = <4>;
+
+
+```
+
+*Donde el valor seleccionado en <4> es utilizado para realizar la búsqueda de los contratos con el respectivo tipo de estado*
+
+
+
 
 
 | Codigo Requerimiento  |R-012| 
