--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -29,7 +29,7 @@ ORDER BY
 
 ```
 
-* **Filtrar por tipo de inmueble :** El usuario elegirá la filtro "Tipo de inmueble" dentro del cuadro de opciones para realizar la consulta y poder mostrar los contratos con el tipo de inmueble seleccionado.
+* **Filtrar por tipo de inmueble :** El usuario elegirá el filtro "Tipo de inmueble" dentro del cuadro de opciones para realizar la consulta y poder mostrar los contratos con el tipo de inmueble seleccionado.
 ```sql
 SELECT
     ca.id_contrato AS "Nro Contrato",
@@ -53,7 +53,7 @@ WHERE ec.tipo_inmueble = <1>;
 
 *Donde el valor seleccionado en <1> es utilizado para realizar la búsqueda de los contratos que posean esas caracteristicas*
 
-* **Filtrar por Contratos recientes :** El usuario elegirá la filtro "Contratos recientes" dentro del cuadro de opciones para realizar la consulta y poder mostrar los contratos que se hayan registrado recientemente.
+* **Filtrar por Contratos recientes :** El usuario elegirá el filtro "Contratos recientes" dentro del cuadro de opciones para realizar la consulta y poder mostrar los contratos que se hayan registrado recientemente.
 ```sql
 SELECT
     ca.id_contrato AS "Nro Contrato",
@@ -75,7 +75,7 @@ ORDER BY ca.fecha_inicio DESC;
 
 ```
 
-* **Filtrar por Contratos proximos a vencer :** El usuario elegirá la filtro "Proximos a vencer" dentro del cuadro de opciones para realizar la consulta y poder mostrar los resultados.
+* **Filtrar por Contratos proximos a vencer :** El usuario elegirá el filtro "Proximos a vencer" dentro del cuadro de opciones para realizar la consulta y poder mostrar los resultados.
 ```sql
 SELECT
     ca.id_contrato AS "Nro Contrato",
@@ -97,7 +97,7 @@ ORDER BY ca.fecha_vencimiento DESC;
 
 ```
 
-* **Filtrar por estado :** El usuario elegirá la filtro "Estado" dentro del cuadro de opciones para realizar la consulta y poder mostrar los contratos con el tipo de estado seleccionado.
+* **Filtrar por estado :** El usuario elegirá el filtro "Estado" dentro del cuadro de opciones para realizar la consulta y poder mostrar los contratos con el tipo de estado seleccionado.
 ```sql
 SELECT
     ca.id_contrato AS "Nro Contrato",
@@ -121,6 +121,111 @@ WHERE ca.estado = <4>;
 ```
 
 *Donde el valor seleccionado en <4> es utilizado para realizar la búsqueda de los contratos con el respectivo tipo de estado*
+
+| Codigo Requerimiento  |R-10| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-012| 
+| Imagen interfaz       |![image](I012.png)|
+
+## Sentencias SQL
+### Eventos:
+* **Carga de los espacios comerciales/objetos de alquiler:** Se llenará la tabla de todos los espacios comerciales dentro de MallPlaza
+```sql
+SELECT 
+    Espacio_Comercial.id_espacio_comercial AS "Código",
+    Zonas.referencia AS "Referencia",
+    Zonas.nombre_zona AS "Zona",
+    Espacio_Comercial.tipo_inmueble AS "Tipo de Inmueble",
+    Espacio_Comercial.tarifa AS "Tarifa",
+    Espacio_Comercial.area AS "Área total",
+    Espacio_Comercial.estado AS "Estado"
+FROM 
+    Espacio_Comercial
+JOIN 
+    Zonas ON Espacio_Comercial.nombre_zona = Zonas.nombre_zona;
+
+```
+
+* **Filtrar por tipo de inmueble :** El usuario elegirá el filtro "Tipo de inmueble" dentro del cuadro de opciones para realizar la consulta y poder mostrar los espacios comerciales con el tipo de inmueble seleccionado.
+```sql
+SELECT 
+    Espacio_Comercial.id_espacio_comercial AS "Código",
+    Zonas.referencia AS "Referencia",
+    Zonas.nombre_zona AS "Zona",
+    Espacio_Comercial.tipo_inmueble AS "Tipo de Inmueble",
+    Espacio_Comercial.tarifa AS "Tarifa",
+    Espacio_Comercial.area AS "Área total",
+    Espacio_Comercial.estado AS "Estado"
+FROM 
+    Espacio_Comercial
+JOIN 
+    Zonas ON Espacio_Comercial.nombre_zona = Zonas.nombre_zona
+WHERE
+    Espacio_Comercial.tipo_inmueble = <1>;
+    
+```
+
+*Donde el valor seleccionado en <1> es utilizado para realizar la búsqueda de los espacios comerciales que posean esas caracteristicas*
+
+* **Filtrar por Mayor tarifa :** El usuario elegirá el filtro "Mayor tarifa" dentro del cuadro de opciones para realizar la consulta y poder mostrar los contratos con mayor tarifa.
+```sql
+SELECT 
+    Espacio_Comercial.id_espacio_comercial AS "Código",
+    Zonas.referencia AS "Referencia",
+    Zonas.nombre_zona AS "Zona",
+    Espacio_Comercial.tipo_inmueble AS "Tipo de Inmueble",
+    Espacio_Comercial.tarifa AS "Tarifa",
+    Espacio_Comercial.area AS "Área total",
+    Espacio_Comercial.estado AS "Estado"
+FROM 
+    Espacio_Comercial
+JOIN 
+    Zonas ON Espacio_Comercial.nombre_zona = Zonas.nombre_zona
+ORDER BY 
+    Espacio_Comercial.tarifa DESC;
+
+```
+
+* **Filtrar por Menor tarifa :** El usuario elegirá el filtro "Menor tarifa" dentro del cuadro de opciones para realizar la consulta y poder mostrar los resultados.
+```sql
+SELECT 
+    Espacio_Comercial.id_espacio_comercial AS "Código",
+    Zonas.referencia AS "Referencia",
+    Zonas.nombre_zona AS "Zona",
+    Espacio_Comercial.tipo_inmueble AS "Tipo de Inmueble",
+    Espacio_Comercial.tarifa AS "Tarifa",
+    Espacio_Comercial.area AS "Área total",
+    Espacio_Comercial.estado AS "Estado"
+FROM 
+    Espacio_Comercial
+JOIN 
+    Zonas ON Espacio_Comercial.nombre_zona = Zonas.nombre_zona
+ORDER BY 
+    Espacio_Comercial.tarifa ASC;
+
+```
+
+* **Filtrar por estado :** El usuario elegirá el filtro "Estado" dentro del cuadro de opciones para realizar la consulta y poder mostrar los contratos con el tipo de estado seleccionado.
+```sql
+SELECT 
+    Espacio_Comercial.id_espacio_comercial AS "Código",
+    Zonas.referencia AS "Referencia",
+    Zonas.nombre_zona AS "Zona",
+    Espacio_Comercial.tipo_inmueble AS "Tipo de Inmueble",
+    Espacio_Comercial.tarifa AS "Tarifa",
+    Espacio_Comercial.area AS "Área total",
+    Espacio_Comercial.estado AS "Estado"
+FROM 
+    Espacio_Comercial
+JOIN 
+    Zonas ON Espacio_Comercial.nombre_zona = Zonas.nombre_zona
+WHERE 
+    Espacio_Comercial.estado = <4>;
+
+```
+
+*Donde el valor seleccionado en <4> es utilizado para realizar la búsqueda de los espacios comerciales con el respectivo tipo de estado*
+
 
 
 
