--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -226,6 +226,61 @@ WHERE
 
 *Donde el valor seleccionado en <4> es utilizado para realizar la búsqueda de los espacios comerciales con el respectivo tipo de estado*
 
+| Codigo Requerimiento  |R-11| 
+|-----------------------|-------|
+| Codigo Interfaz       |I-011, I-013, I-014|
+| Imagen interfaz       |![image](I013.png)| 
+| Imagen interfaz       |![image](I014.png)|
+| Imagen interfaz       |![image](I015.png)|
+
+
+## Sentencias SQL
+### Eventos:
+* **Carga de la pagina inicial:** Se llenará la tabla de todos los contratos dentro de MallPlaza
+```sql
+SELECT
+    ca.id_contrato AS "Nro Contrato",
+    p.nombre AS "Inquilino",
+    ec.tipo_inmueble AS "Inmueble",
+    ca.fecha_inicio AS "Fecha Inicio",
+    ca.fecha_vencimiento AS "Fecha Fin",
+    ca.estado AS "Estado",
+    ca.monto AS "Monto Renta"
+FROM
+    Contrato_Alquiler ca
+JOIN
+    Espacio_Comercial ec ON ca.id_espacio_comercial = ec.id_espacio_comercial
+JOIN
+    Inquilino i ON ec.id_espacio_comercial = i.id_espacio_comercial
+JOIN
+    Persona p ON i.id_persona = p.id_persona
+ORDER BY
+    ca.id_contrato;
+
+```
+
+* **Seleccion de contrato :** El usuario elegirá cualquier contrato para poder visualizar todos sus detalles.
+```sql
+SELECT * FROM Contrato_Alquiler
+WHERE id_contrato = <1>;
+    
+```
+
+*Donde <1> representa el id del contrato de alquiler de un inquilino*
+
+* **Editar contrato :** El usuario tendrá la opcion de editar el contrato seleccionado.
+```sql
+UPDATE Contrato_Alquiler
+SET fecha_inicio = <8> 
+    fecha_vencimiento = <9>
+    estado = <5>
+    porcentaje = <6>
+    zona = <2>
+    tipo_inmueble = <4>
+WHERE id_inquilino = 'I001'; -- ejemplo
+
+```
+
 
 
 
