--- a/8/8.1/8.1.md
+++ b/8/8.1/8.1.md
@@ -10,7 +10,7 @@
 ```sql
 SELECT
     ca.id_contrato AS "Nro Contrato",
-    p.nombre AS "Inquilino",
+    p.id_persona AS "Inquilino",
     ec.tipo_inmueble AS "Inmueble",
     ca.fecha_inicio AS "Fecha Inicio",
     ca.fecha_vencimiento AS "Fecha Fin",
@@ -33,7 +33,7 @@ ORDER BY
 ```sql
 SELECT
     ca.id_contrato AS "Nro Contrato",
-    p.nombre AS "Inquilino",
+    p.id_persona AS "Inquilino",
     ec.tipo_inmueble AS "Inmueble",
     ca.fecha_inicio AS "Fecha Inicio",
     ca.fecha_vencimiento AS "Fecha Fin",
@@ -57,7 +57,7 @@ WHERE ec.tipo_inmueble = <1>;
 ```sql
 SELECT
     ca.id_contrato AS "Nro Contrato",
-    p.nombre AS "Inquilino",
+    p.id_persona AS "Inquilino",
     ec.tipo_inmueble AS "Inmueble",
     ca.fecha_inicio AS "Fecha Inicio",
     ca.fecha_vencimiento AS "Fecha Fin",
@@ -79,7 +79,7 @@ ORDER BY ca.fecha_inicio DESC;
 ```sql
 SELECT
     ca.id_contrato AS "Nro Contrato",
-    p.nombre AS "Inquilino",
+    p.id_persona AS "Inquilino",
     ec.tipo_inmueble AS "Inmueble",
     ca.fecha_inicio AS "Fecha Inicio",
     ca.fecha_vencimiento AS "Fecha Fin",
@@ -101,7 +101,7 @@ ORDER BY ca.fecha_vencimiento DESC;
 ```sql
 SELECT
     ca.id_contrato AS "Nro Contrato",
-    p.nombre AS "Inquilino",
+    p.id_persona AS "Inquilino",
     ec.tipo_inmueble AS "Inmueble",
     ca.fecha_inicio AS "Fecha Inicio",
     ca.fecha_vencimiento AS "Fecha Fin",
