--- a/0/0.7_Luis/0.7.md
+++ b/0/0.7_Luis/0.7.md
@@ -28,3 +28,7 @@ https://www.youtube.com/watch?v=aFd-9lCwkyY&t=347s
 * Practica 2:
 
 https://www.youtube.com/watch?v=MAzT_j5Gz6w
+
+* Practica 3:
+
+https://youtu.be/zp1cKG59zRc
